<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>ch.erzberger.sharppc</groupId>
        <artifactId>sharp-pocket-computer</artifactId>
        <version>1.0.0</version>
    </parent>

    <artifactId>SharpCommunicator</artifactId>
    <version>1.0.0</version>

    <properties>
        <!-- maven compiler source and target are set below in the plugin -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.jSerialComm>2.11.0</version.jSerialComm>
        <version.lombok>1.18.32</version.lombok>
        <version.commons-cli>1.7.0</version.commons-cli>
        <version.junit>5.10.2</version.junit>
        <version.maven-assembly-plugin>3.7.1</version.maven-assembly-plugin>
        <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.fazecast</groupId>
            <artifactId>jSerialComm</artifactId>
            <version>${version.jSerialComm}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>${version.commons-cli}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <!-- You can remove the compiler plugin for any jdk < 21, see comment below. -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
                    <compilerArgs>
                        <!-- JDK 21 generates a warning without this option, see https://inside.java/2023/07/29/quality-heads-up/ -->
                        <arg>-proc:full</arg>
                    </compilerArgs>
                    <!-- Set to 17 for Raspberry Pi compatibility (no JDK 21 or 22 there yet) -->
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${version.maven-assembly-plugin}</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>sharp</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>SharpCommunicator</finalName>
                            <archive>
                                <manifest>
                                    <mainClass>
                                        ch.erzberger.sharppc.SharpCommunicator
                                    </mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>